compiler/tools/fpp-check/test/framework_defs/dp_state_not_enum.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/framework_defs/dp_state_not_enum.fpp:2.5
    struct DpState {
    ^
error: the F Prime framework type Fw.DpState must be an enum
